examples/test/testpolicy12986.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12986
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key43: value39
      key46: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value12
          key18: value32
      podSelector:
        matchLabels:
          key11: value35
          key42: value45
